--- a/style.css
+++ b/style.css
@@ -87,3 +87,18 @@ a {
   left: 50vw;
   border-radius: 50vw;
 }
+
+#sort {
+  padding: 16px;
+  margin: 16px;
+  font-size: 1.5rem;
+  border-radius: 5px;
+  color: orange;
+  background-color: white;
+}
+
+#sort:hover {
+  cursor: pointer;
+  background-color: orange;
+  color: white;
+}
