change rows classname

--- a/style.css
+++ b/style.css
@@ -229,7 +229,8 @@ a {
 }
 #shopping-cart {
   overflow: auto;
-  height: 85%;
+  height: 80%;
+  width: 100%;
 }
 #modal-footer {
   align-items: center;
